@@ -243,44 +243,7 @@ namespace Mono.Cecil.Cil {
 		static int GetLength (Instruction start, Instruction end, InstructionCollection instructions)
 		{
 			Instruction last = instructions [instructions.Count - 1];
-			return (end == instructions.Outside ? last.Offset + GetSize (last) : end.Offset) - start.Offset;
-		}
-
-		static int GetSize (Instruction i)
-		{
-			int size = i.OpCode.Size;
-
-			switch (i.OpCode.OperandType) {
-			case OperandType.InlineSwitch:
-				size += ((Instruction []) i.Operand).Length * 4;
-				break;
-			case OperandType.InlineI8:
-			case OperandType.InlineR:
-				size += 8;
-				break;
-			case OperandType.InlineBrTarget:
-			case OperandType.InlineField:
-			case OperandType.InlineI:
-			case OperandType.InlineMethod:
-			case OperandType.InlineString:
-			case OperandType.InlineTok:
-			case OperandType.InlineType:
-			case OperandType.ShortInlineR:
-				size += 4;
-				break;
-			case OperandType.InlineParam:
-			case OperandType.InlineVar:
-				size += 2;
-				break;
-			case OperandType.ShortInlineBrTarget:
-			case OperandType.ShortInlineI:
-			case OperandType.ShortInlineParam:
-			case OperandType.ShortInlineVar:
-				size += 1;
-				break;
-			}
-
-			return size;
+			return (end == instructions.Outside ? last.Offset + last.GetSize () : end.Offset) - start.Offset;
 		}
 
 		static bool IsRangeFat (Instruction start, Instruction end, InstructionCollection instructions)
